<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.heaton.funnyvote.com.heaton.funnyvote.MainActivity">
    <group
        android:id="@+id/nav_classification"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_main"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/navigation_item_list_my_box"
            android:icon="@drawable/ic_vote_box"
            android:title="@string/drawer_my_box" />
    </group>
    <group
        android:id="@+id/nav_feature"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_create_vote"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/drawer_create_new_vote" />
        <item
            android:id="@+id/navigation_item_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/drawer_search" />
    </group>

    <group
        android:id="@+id/nav_information"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/drawer_account" />
        <item
            android:id="@+id/navigation_item_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/drawer_about" />
    </group>
</menu>