<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/color_primary"
        android:minHeight="40dp"
        android:titleTextColor="@color/md_blue_50" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_toolbar"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_vote_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:fadeScrollbars="false"
        android:fontFamily="sans-serif-light"
        android:hint="@string/create_vote_title_hint"
        android:maxLines="4"
        android:scrollbars="vertical"
        android:textSize="16sp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutCreateVote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/md_blue_300"
        android:minHeight="36dp"
        app:tabIndicatorColor="@color/md_blue_100"
        app:tabIndicatorHeight="4dp"
        app:tabSelectedTextColor="?android:attr/textColorPrimaryInverse" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpSubArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tabLayoutCreateVote"
        android:layout_below="@id/edtTitle"
        android:layout_weight="1" />

    <at.grabner.circleprogress.CircleProgressView
        android:id="@+id/circleLoad"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        CircleProgressView:cpv_autoTextSize="true"
        CircleProgressView:cpv_barColor="@color/primary"
        CircleProgressView:cpv_barWidth="25dp"
        CircleProgressView:cpv_innerContourSize="0dp"
        CircleProgressView:cpv_outerContourSize="2dp"
        CircleProgressView:cpv_rimColor="@color/primary_light"
        CircleProgressView:cpv_rimWidth="25dp"
        CircleProgressView:cpv_seekMode="false"
        CircleProgressView:cpv_spinColor="@color/primary"
        CircleProgressView:cpv_textColor="@color/primary_dark"
        CircleProgressView:cpv_textScale="1"
        CircleProgressView:cpv_unitColor="@color/primary_light"
        CircleProgressView:cpv_unitPosition="right_top" />
</RelativeLayout>