<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.heaton.easyvote.MainActivity" >

    <item android:id="@+id/menu_search"
        android:title="Search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        app:showAsAction="always"
        android:orderInCategory="10"
        android:icon="@drawable/ic_add_white_24dp"
        android:id="@+id/menu_add"
        />
</menu>
